@@ -494,6 +494,20 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>upgrade_outgoing_qos</option> [ true | false ]</term>
+				<listitem>
+					<para>The MQTT specification requires that the QoS of a
+						message delivered to a subscriber is never upgraded to
+						match the QoS of the subscription. Enabling this option
+						changes this behaviour. If upgrade_outgoing_qos is set
+						true, messages sent to a subscriber will always match
+						the QoS of its subscription. This is a non-standard
+						option not provided for by the spec. Defaults to
+						false.</para>
+					<para>Reloaded on reload signal.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>user</option> <replaceable>username</replaceable></term>
 				<listitem>
 					<para>When run as root, change to this user and its primary
