@@ -96,6 +96,13 @@
 # correctly deal with duplicate messages even when then have QoS=2.
 #allow_duplicate_messages false
 
+# The MQTT specification requires that the QoS of a message delivered to a
+# subscriber is never upgraded to match the QoS of the subscription. Enabling
+# this option changes this behaviour. If upgrade_outgoing_qos is set true,
+# messages sent to a subscriber will always match the QoS of its subscription.
+# This is a non-standard option not provided for by the spec.
+#upgrade_outgoing_qos false
+
 # =================================================================
 # Default listener
 # =================================================================
